--- a/index.html
+++ b/index.html
@@ -1,21 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Tugas Pemrograman Web</title>
-	<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>test no sleep</title>
+
+    <!-- <script src="plugin/NoSleep.js"></script>
+    <script src="controller/manage.js"></script> -->
 </head>
 <body>
-<center>
-	<h1>Selamat Datang</h1>&nbsp;&nbsp;
-	<ul>
-		<li><a href="minggu1.html">Minggu 1</a></li>
-		<li><a href="minggu2.html">Minggu 2</a></li>
-		<li><a href="minggu3.html">Minggu 3</a></li>
-	</ul>
+    <!-- <input type="button" id="toggle" value="Wake Lock is disabled" /> -->
+    <!-- <button onclick="setNoSleep()">Click me</button> -->
+    <script>
+      alert("v4")
+        // var noSleep = new NoSleep();
 
-	
-</center>
+  
+        // var wakeLockEnabled = false;
+        // var toggleEl = document.querySelector("#toggle");
+        // toggleEl.addEventListener('click', function() {
+        //   if (!wakeLockEnabled) {
+        //     noSleep.enable(); // keep the screen on!
+        //     wakeLockEnabled = true;
+        //     toggleEl.value = "Wake Lock is enabled";
+        //     document.body.style.backgroundColor = "green";
+        //   } else {
+        //     noSleep.disable(); // let the screen turn off.
+        //     wakeLockEnabled = false;
+        //     toggleEl.value = "Wake Lock is disabled";
+        //     document.body.style.backgroundColor = "";
+        //   }
+        // }, false);
+        // setTimeout(()=>{
+        //   alert("start")
+          window.location.assign("cocos/index.html");
+        // }, 5000);
+      </script>
 </body>
 </html>
