--- a/cocos/index.html
+++ b/cocos/index.html
@@ -85,15 +85,15 @@
 		isWebViewAndroid: /wv/.test(navigator.userAgent)
   };
 
-  alert("isAppsAndroid : " + navigator.userAgent);
-  alert("isAppsAndroid : " + getBrowser.isAppsAndroid);
-  alert("isWebViewAndroid : " + getBrowser.isWebViewAndroid);
-  alert("isMobile : " + isMobile);
-  if(getBrowser.isAppsAndroid && getBrowser.isWebViewAndroid && isMobile){
-    alert("iSAPLICATIONS")
-  } else {
-    alert("is no APP")
-  }
+  // alert("isAppsAndroid : " + navigator.userAgent);
+  // alert("isAppsAndroid : " + getBrowser.isAppsAndroid);
+  // alert("isWebViewAndroid : " + getBrowser.isWebViewAndroid);
+  // alert("isMobile : " + isMobile);
+  // if(getBrowser.isAppsAndroid && getBrowser.isWebViewAndroid && isMobile){
+  //   alert("iSAPLICATIONS")
+  // } else {
+  //   alert("is no APP")
+  // }
 </script>
 
 </body>
