--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- <input type="button" id="toggle" value="Wake Lock is disabled" /> -->
     <!-- <button onclick="setNoSleep()">Click me</button> -->
     <script>
-      alert("v4")
+      // alert("v4")
         // var noSleep = new NoSleep();
 
   
