--- a/cocos2/index.html
+++ b/cocos2/index.html
@@ -38,7 +38,7 @@
   <!--<link rel="apple-touch-icon-precomposed" href=".png" />-->
 
   <link rel="stylesheet" type="text/css" href="style.css"/>
-
+  <script src="../plugin/jquery-2.1.3.min.js"></script>
 </head>
 <body>
   <canvas id="GameCanvas" oncontextmenu="event.preventDefault()" tabindex="0"></canvas>
@@ -53,6 +53,7 @@
 <script src="src/import-map.json" type="systemjs-importmap" charset="utf-8"> </script>
 
 <script>
+  console.log("testtt mau masuk");
     System.import('./index.js').catch(function(err) { console.error(err); })
 </script>
 
