--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <!-- <button onclick="setNoSleep()">Click me</button> -->
     <button type="button" onclick=onOlderCocos()>Cocos 3.3.2</button>
     <button type="button" onclick=onLatestCocos()>Cocos 3.6.0</button>
+    <button type="button" onclick=onBlankCocos()>Cocos Blank 3.3.2</button>
+    <button type="button" onclick=onChooseFileCocos()>Cocos ChooseFile 3.3.2</button>
     <script>
       // alert("v4")
         // var noSleep = new NoSleep();
