url project file

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <button type="button" onclick=onLatestCocos()>Cocos 3.6.0</button>
     <button type="button" onclick=onBlankCocos()>Cocos Blank 3.3.2</button>
     <button type="button" onclick=onChooseFileCocos()>Cocos ChooseFile 3.3.2</button>
+    <button type="button" onclick=onProjectFile()>Project Cocos File</button>
     <script>
       // alert("v4")
         // var noSleep = new NoSleep();
