add video rails

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <button type="button" onclick=onChooseFileCocos()>Cocos ChooseFile 3.3.2</button>
     <button type="button" onclick=onDrawcallCocos()>Cocos drawcall 3.3.2</button>
     <button type="button" onclick=onProjectFile()>Project Cocos File</button>
+    <button type="button" onclick=onOpenVideoRails()>Video Ruby on Rails</button>
     <script>
       // alert("v4")
         // var noSleep = new NoSleep();
